<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [<!ENTITY appname "MyAppName">]>

<resources>
    <string name="keep_alive_tips">为了App更好的运行，建议你进行以下设置：</string>
    <string name="keep_alive_tips2">请勿开启「省电模式」</string>
    <string name="keep_alive_tips3">如果开启了省电模式，将可能导致功能异常。建议你在使用过程中关闭省电模式</string>

    <string name="keep_alive_battery_opti">电池耗电优化</string>
    <string name="keep_alive_battery_opti_sub">系统为了省电，可能会在本App运行过程中误杀进程，需要将本App加入保护白名单中</string>

    <string name="keep_alive_background">后台运行权限</string>
    <string name="keep_alive_background_sub">如果没有开启后台权限，将导致功能运行异常，定位记录异常，数据实时更新异常等</string>


    <string name="keep_alive_battery_set">省电模式设置</string>
    <string name="keep_alive_battery_set_sub">在省电模式下允许 App 在后台持续运行。</string>

    <string name="go_setting">去设置</string>



</resources>