<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/keep_alive_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="22dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:text="@string/keep_alive_tips"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_black_white_16"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/keep_alive_tips">


        <TextView
            android:id="@+id/keep_alive_tips_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="11dp"
            android:paddingBottom="4dp"
            android:text="@string/keep_alive_tips2"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/keep_alive_tips_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="11dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="15dp"
            android:text="@string/keep_alive_tips3"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_tips_2" />

        <View
            android:id="@+id/battery_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_tips_3" />


        <TextView
            android:id="@+id/keep_alive_tips_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:text="@string/keep_alive_battery_opti"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/battery_line" />


        <TextView
            android:id="@+id/keep_alive_battery_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_black_white_24"
            android:paddingLeft="14dp"
            android:paddingTop="5dp"
            android:paddingRight="14dp"
            android:paddingBottom="5dp"
            android:text="@string/go_setting"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/keep_alive_tips_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/keep_alive_tips_battery" />


        <TextView
            android:id="@+id/keep_alive_tips_battery_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="11dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="15dp"
            android:text="@string/keep_alive_battery_opti_sub"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_tips_battery" />


        <View
            android:id="@+id/background_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_tips_battery_sub" />


        <TextView
            android:id="@+id/keep_alive_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/keep_alive_background"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/background_line" />

        <TextView
            android:id="@+id/keep_alive_background_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_black_white_24"
            android:paddingLeft="14dp"
            android:paddingTop="5dp"
            android:paddingRight="14dp"
            android:paddingBottom="5dp"
            android:text="@string/go_setting"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/keep_alive_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/keep_alive_background" />

        <TextView
            android:id="@+id/keep_alive_background_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="11dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="15dp"
            android:text="@string/keep_alive_background_sub"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_background" />


        <View
            android:id="@+id/battery_set_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/keep_alive_background_sub" />


        <TextView
            android:id="@+id/battery_set_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/keep_alive_battery_set"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/battery_set_line" />

        <TextView
            android:id="@+id/battery_set_background_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_black_white_24"
            android:paddingLeft="14dp"
            android:paddingTop="5dp"
            android:paddingRight="14dp"
            android:paddingBottom="5dp"
            android:text="@string/go_setting"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/battery_set_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/battery_set_background" />

        <TextView
            android:id="@+id/battery_set_background_set_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="11dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="15dp"
            android:text="@string/keep_alive_battery_opti_sub"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/battery_set_background_set" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>






